test/scc/expr/semantic-errors/133.t
void test()
{
    int b;
    int a[10] = { [b] = 0 };
}